--- a/portfolio.html
+++ b/portfolio.html
@@ -1,92 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Tan Yong Jun's Portfolio</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body id="page-top">
-<!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Yong Jun's Portfolio&nbsp;</a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu<i class="fas fa-bars"></i></button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a href="index.html" target="_blank" class="nav-link js-scroll-trigger">Home</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="portfolio.html" target="_blank">Portfolio</a></li>
-                        <li class="nav-item"><a href="about.html" target="_blank" class="nav-link">About Me</a></li>
-                    </ul>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Tan Yong Jun's Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+</head>
+
+<body id="page-top">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">Yong Jun's Portfolio&nbsp;</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">Menu<i class="fas fa-bars"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a href="index.html" target="_self"
+                            class="nav-link js-scroll-trigger">Home</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="portfolio.html"
+                            target="_self">Portfolio</a></li>
+                    <li class="nav-item"><a href="about.html" target="_self" class="nav-link">About Me</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Masthead-->
+    <header class="masthead">
+        <div class="container d-flex h-100 align-items-center"> </div>
+    </header>
+    <!-- About-->
+    <section class="about-section text-center" id="about">
+        <div class="container">
+            <div class="row"></div>
+        </div>
+    </section>
+    <!-- Projects-->
+    <section class="projects-section bg-light" id="projects">
+        <div><img src="assets/img/bg-masthead.jpg" width="2418" height="1606" alt="" /><img src="assets/img/dillon.jpg"
+                width="1664" height="1107" alt="" /><img src="assets/img/shawn.jpg" width="1190" height="2086" alt="" />
+        </div>
+        <img src="assets/img/ipad.jpg" width="1598" height="897" alt="" />
+        <img src="assets/img/demo-image-02.jpg" width="1578" height="847" alt="" /><img
+            src="assets/img/magazinedesign_Page_01.jpg" width="1329" height="1884" alt="" /><img
+            src="assets/img/magazinedesign_Page_06.jpg" width="1577" height="2235" alt="" />
+        <img src="assets/img/_DSC1447.jpg" width="2914" height="1639" alt="" />
+        <img src="assets/img/_TYJ6149.jpg" width="2552" height="4535" alt="" />
+        <div class="container">
+            <!-- Featured Project Row-->
+            <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+                <div class="col-xl-8 col-lg-7"></div>
+                <div class="col-xl-4 col-lg-5"> </div>
+            </div>
+            <!-- Project One Row-->
+            <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                <div class="col-lg-6"></div>
+            </div>
+            <!-- Project Two Row-->
+            <div class="row justify-content-center no-gutters">
+                <div class="col-lg-6"></div>
+            </div>
+        </div>
+    </section>
+    <!-- Signup-->
+    <section class="signup-section" id="signup">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 col-lg-8 mx-auto text-center">
+                    <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
+                    <h2 class="text-white mb-5">Contact me </h2>
+                    <form class="form-inline d-flex"><input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0"
+                            id="inputEmail" type="email" placeholder="Leave email address..." />
+                        <button class="btn btn-primary mx-auto" type="submit">Send&nbsp;</button>
+                    </form>
                 </div>
             </div>
-        </nav>
-        <!-- Masthead-->
-        <header class="masthead">
-            <div class="container d-flex h-100 align-items-center"> </div>
-        </header>
-        <!-- About-->
-        <section class="about-section text-center" id="about">
-            <div class="container">
-              <div class="row"></div>
-</div>
-        </section>
-        <!-- Projects-->
-        <section class="projects-section bg-light" id="projects">
-            <div><img src="assets/img/bg-masthead.jpg" width="2418" height="1606" alt=""/><img src="assets/img/dillon.jpg" width="1664" height="1107" alt=""/><img src="assets/img/shawn.jpg" width="1190" height="2086" alt=""/></div>
-            <img src="assets/img/ipad.jpg" width="1598" height="897" alt=""/>
-            <img src="assets/img/demo-image-02.jpg" width="1578" height="847" alt=""/><img src="assets/img/magazinedesign_Page_01.jpg" width="1329" height="1884" alt=""/><img src="assets/img/magazinedesign_Page_06.jpg" width="1577" height="2235" alt=""/>
-			<img src="assets/img/_DSC1447.jpg" width="2914" height="1639" alt=""/>
-		  <img src="assets/img/_TYJ6149.jpg" width="2552" height="4535" alt=""/>
-<div class="container">
-      <!-- Featured Project Row-->
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-          <div class="col-xl-8 col-lg-7"></div>
-          <div class="col-xl-4 col-lg-5"> </div>
-    </div>
-      <!-- Project One Row-->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-          <div class="col-lg-6"></div>
-      </div>
-      <!-- Project Two Row-->
-      <div class="row justify-content-center no-gutters">
-          <div class="col-lg-6"></div>
-      </div>
-    </div>
-        </section>
-        <!-- Signup-->
-        <section class="signup-section" id="signup">
-            <div class="container">
-                <div class="row"></div>
-            </div>
-        </section>
-        <!-- Contact-->
-        <section class="contact-section bg-black">
-            <div class="container">
-                <div class="row"></div>
-                <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+        </div>
+    </section>
+
+    <!-- Contact-->
+    <section class="contact-section bg-black">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="card py-4 h-100">
+                        <div class="card-body text-center">
+                            <i class="fas fa-envelope text-primary mb-2"></i>
+                            <h4 class="text-uppercase m-0">Email</h4>
+                            <hr class="my-4" />
+                            <div class="small text-black-50">tanyongjun097@gmail.com</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="card py-4 h-100">
+                        <div class="card-body text-center">
+                            <i class="fas fa-mobile-alt text-primary mb-2"></i>
+                            <h4 class="text-uppercase m-0">&nbsp;Phone Number</h4>
+                            <hr class="my-4" />
+                            <div class="small text-black-50">+65 96725272</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3 mb-md-0">
+                    <div class="card py-4 h-100">
+                        <div class="card-body text-center">
+                            <i class="fab fa-instagram text-primary mb-2"></i>
+                            <h4 class="text-uppercase m-0">&nbsp;Instagram</h4>
+                            <hr class="my-4" />
+                            <div class="small text-black-50"><a
+                                    href="https://www.instagram.com/s8ciety/?hl=en">@s8ciety</a></div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </section>
-        <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50">
-          <div class="container">Copyright © Tan Yong Jun</div></footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-        <!-- Third party plugin JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+
+            <div class="social d-flex justify-content-center">
+                <a class="mx-2" href="http://www.linkedin.com/in/yong-jun-tan-63b575221"><i
+                        class="fab fa-linkedin-in"></i></a><a class="mx-2"
+                    href="https://www.tiktok.com/@s8ciety?lang=en"><i class="fab fa-tiktok"></i></a><a class="mx-2"
+                    href="https://www.youtube.com/channel/UC6aPzsuiiHWMNskx7ndKRUw"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+    </section>
+    <!-- Footer-->
+    <footer class="footer bg-black small text-center text-white-50">
+        <div class="container">Copyright © Tan Yong Jun</div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+</body>
+
 </html>
